Update: Added the background to the undermenu, but didnt use it yet. Fixed: _mobile.scss: on the className dragon menu container I changed the width and height.  Fixed: _tablet.scss: set a height on the dragon menu container.  Fixed: _desktop.scss: I fixed the logo background to have more height and width and also took away the padding and made it to the center. On the special id logo I took away the padding right and took some padding top instead and like the logo background I took it to the center. The className nav wrapper I took to 100 procent on both the height and width, but I believe the nav wrapper needs to change some more because right now that className are blocking somehow to make the homepage and the list of dragons be at the top of the page. The nav I changed to have a width of 25 procent and also changed the order to be 1. On the className nav menu I added some Margin right and padding top to make it be in the position I wanted it to be.  At the fact wrapper I noticed that I had a big margin left on it, I took it away and it fixed the page to not be able to scroll to the right, meaning all went normal again. Instead I added some padding right so that all the content in the fact wrapper would be placed in the position I wanted. The className dragonhead were too small in height before according to my mockup so I changed it to look alike. Instead of having padding-left, padding-top I changed it to have padding in general and how much in each direction to do little lesser code, I added also some margin bottom to make the fact container not so close to the dragonhead, I changed the order to be 3. In the stat container I changed the order to 2, and like the dragonhead I gave it the same height to match each other like in my mockup. The className stat paragraph I gave it more width in procent, more height, and a bigger font size. On the fact container I gave it lesser width, more height, gave it an order of 4, took away padding zero. On the className parchme

--- a/src/sass/_desktop.scss
+++ b/src/sass/_desktop.scss
@@ -1,8 +1,8 @@
 
 .logo--background{
-    height: 170px;
-    width: 220px;
-    padding-left: 20px;
+    height: 230px;
+    width: 270px;
+    align-items: center;
 }
 
 
@@ -15,7 +15,8 @@
    display: inline-block;
    height: 170px;
    width: 200px;
-    padding-right: 60px;
+    align-items: center;
+    padding-top: 40px;
    
 }
 
@@ -29,8 +30,8 @@
 
 
 .nav--wrapper{
-   min-width: 200px;
-   min-height: 170px;
+   width: 100%;
+   height: 100%;
     margin: 0;
     
     
@@ -38,11 +39,11 @@
 
 nav{
     
-    order: 4; /*fixed*/
+    order: 1; /*fixed*/
     justify-content: none;
       background-image: none;
      padding: 0;
-    width: 30%;
+    width: 25%;
     position: absolute;
     
     
@@ -62,6 +63,9 @@ nav{
 
 .nav--menu{
     flex-direction: column;
+    margin-right: 90px;
+    padding-top: 20px;
+     
 }
 
 
@@ -162,9 +166,9 @@ nav{
 .fact--wrapper{
     height: 100%;
     width: 100%;
-    padding: 0;
-    margin-left: 400px;
+    padding-right: 200px;
     display: flex;
+    justify-content: flex-end;
     flex-direction: row;
   
     
@@ -175,11 +179,10 @@ nav{
     /*fixed*/
     display: flex;
     width: 30%;
-    height: 350px;
-    padding-left: 20px;
-    padding-top: 20px;
-    margin: 0;
-    order: 2;
+    height: 500px;
+    padding: 20px 0px 37px 3px;
+    margin-bottom: 50px;
+    order: 3;
     border: 1px solid #000; /*fixed*/
     
     
@@ -198,11 +201,11 @@ nav{
 */
 .stat--container{
     display: flex; /*fixed*/
-   height: 350px; /*fixed*/
+   height: 500px; /*fixed*/
     border: 1px solid #000;
     width: 30%;
     margin: 0;
-    order: 1; /*fixed*/
+    order: 2; /*fixed*/
     position: relative; /*fixed*/
     padding: 0; /*fixed*/
 }
@@ -212,9 +215,9 @@ nav{
   border: none;
   padding: 50px 20px 0px 0px;
   text-align: left;
-    width: 80%;
-    height: 350px; /*fixed*/
-    font-size: 20px; /*fixed*/
+    width: 90%;
+    height: 450px; /*fixed*/
+    font-size: 24px; /*fixed*/ 
     
     
     
@@ -226,10 +229,9 @@ nav{
 */
 .fact--container{
     overflow-y: scroll;
-      width: 70%;
-     height: 350px;
-     order: 3; /*fixed*/
-    padding: 0;   
+      width: 63%;
+     height: 500px;
+     order: 4; /*fixed*/   
     display: inline-block;
     
 }
@@ -239,7 +241,7 @@ nav{
   margin: 0;
      width: 100%;
   text-align: left;
-  font-size: 16px;
+  font-size: 20px;
 }
 
 
@@ -247,18 +249,18 @@ nav{
 
 
 .homepage--wrapper{
-   
-     
-    
 
 }
 
 .dragon--menu--container{
-    width: 300px;
+    width: 100%;
+    height: 10px;
+  
   
 }
 
 .dragons--facts--container{
+   
     
  
    
@@ -269,9 +271,31 @@ nav{
 /*nav*/
 
 .mainmenu--container{
-    height: 400px;
-    width: 30%;
+    height: 670px;
+    width: 25%;
    
     
     
+}
+
+
+.dragon--links--wrapper{
+    display: flex;
+    height: 1080px;
+    width: 769px;
+   
+
+}
+
+.dragon--links--container{
+    height: 1080px;
+    
+
+
+}
+
+.homepage--stats--wrapper{
+
+   
+ 
 }
