--- a/src/sass/_tablet.scss
+++ b/src/sass/_tablet.scss
@@ -321,6 +321,10 @@ nav img {
 }
 
 
+.dragon--menu--container{
+    height: 175px;
+}
+
 
 
 
